style: fix #10 button color, text balance wrap and autospace control

--- a/app/assets/css/article.scss
+++ b/app/assets/css/article.scss
@@ -103,6 +103,7 @@
             font-family: var(--font-serif);
             font-weight: bolder;
             text-align: center;
+            text-wrap: balance;
         }
 
         > h2::before {
